Add download page, update navigation, and logo links

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ nav {
     color: var(--logo-color);
     text-transform: uppercase;
     letter-spacing: 1px;
+    text-decoration: none;
 }
 
 .nav-links {
